--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
         <button id="applyButton">Применить</button>
         <p id="feedback"></p>
     </div>
+
+    <!-- Модальное окно -->
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <span id="closeModal" class="close">&times;</span>
+            <p id="modalMessage">Приветствие!</p>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
